tests/NormalTests/paczka1/fuzzy1/69070481.err
Error in line 4: aPrLL A247 18,1
Error in line 3: mnR S94 45,8
Error in line 6: 5LceGB0 S94 3,2
Error in line 9: 5LceGB0 A225 29,7
Error in line 8: mnR A225 81,9
Error in line 30: aPrLL A225 45,4
Error in line 31: mnR A247 157,4
